--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,4 @@
-Where is the welcome to ember?  This does not seem to be the bootstrap font :-(
+<div class="container">
+  {{partial 'navbar'}}
+  {{outlet}}
+</div>
