better About and notes.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,3 +1,9 @@
 <h1>About Page</h1>
 
-I love Tracey!!
+<ol>
+  <li>
+This is my walkthrough of the <a href="http://YoEmber.com">YoEmber.com</a> tutorial.</li>
+<li>
+The github repo for this app is <a href="https://github.com/payne/library-app">https://github.com/payne/library-app</a>.
+</li>
+</ol>
