--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,32 @@
-Matt Payne contact information is <a href="http://mattpayne.org/about/">here: MattPayne.org/about/</a>.
+Matt Payne contact information
+is <a href="http://mattpayne.org/about/">here: MattPayne.org/about/</a>.
+
+
+   <br/><br/>
+
+   <p>But you can send Matt a message.  Just enter your email &amp; your message:</p>
+
+   <div class="form-horizontal form-group form-group-lg row">
+     <div class="col-xs-20">
+       {{textarea class="form-control"
+         placeholder="Your message. (At least 5 characters.)"
+         rows="7"
+         value=message}}
+     </div>
+     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
+       {{input type="email" value=emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
+     </div>
+     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-3">
+       <button class="btn btn-primary btn-lg btn-block" {{action 'saveInvitation'}} disabled={{isDisabled}}>Request invitation</button>
+     </div>
+   </div>
+
+   {{#if responseMessage}}
+     <div class="alert alert-success">
+       <p>{{responseMessage}}</p>
+       <p>Your message was:</p>
+       <p>{{message}}</p>
+     </div>
+   {{/if}}
+
+   <br/><br/>
